unpackaged/main/default/objects/ET_Finance_Document__c/ET_Finance_Document__c.object-meta.xml
<CustomObject>
    <label>Finance Document</label>
    <nameField>
        <displayFormat>FINETDEV-{0000000}</displayFormat>
        <label>Fin Doc Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>