unpackaged/main/default/objects/ET_Finance_Document__c/fields/Document_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Document External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>