unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ET_Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>