unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Batch_Source__c.field-meta.xml
<CustomField>
    <fullName>ET_Batch_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>