unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Bill_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>ET_Bill_To_Customer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill To Customer #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>