unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Customer_Oracle_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Customer_Oracle_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Oracle #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>