unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>ET_Payment_Mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>