unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>ET_Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>