unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Transaction_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>