unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Validated_By__c.field-meta.xml
<CustomField>
    <fullName>ET_Validated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>