unpackaged/main/default/objects/ET_Finance_Document__c/fields/ET_Zone__c.field-meta.xml
<CustomField>
    <fullName>ET_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>