unpackaged/main/default/objects/ET_Finance_Document__c/fields/Name_Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Name_Bill_to_Customer__c</fullName>
    <description>this field marked as external id for internal purpose, to insert multiple finance documents as well as multiple finance documents line items in single dml operation.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Name &amp; Bill to Customer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>