unpackaged/main/default/objects/ET_Finance_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Bill_To_Customer__c</columns>
    <columns>Document_External_Id__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>ET_Location__c</columns>
    <columns>Sync_status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>